## $Id: Makefile.am,v 1.34 2007/01/16 19:09:11 dolorous Exp $
AUTOMAKE_OPTIONS = gnu no-dependencies

SUBDIRS = doc m4 po src

EXTRA_DIST = ABOUT-NLS AUTHORS BUGS COPYING ChangeLog INSTALL NEWS \
		README README.CVS THANKS TODO UPGRADE config.rpath \
		install-sh missing mkinstalldirs nano.spec

ACLOCAL_AMFLAGS = -I m4
